--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; color: #333; }
         .container { width: 80%; margin: 0 auto; padding: 20px 0; }
-        header { background: #f4f4f4; padding: 1rem 0; text-align: center; }
+        header { background: #f4f4f4; padding: 1rem 0; text-align: center; position: relative; }
         nav { background: #333; color: #fff; padding: 0.5rem 0; }
         nav a { color: #fff; margin: 0 15px; text-decoration: none; }
         section { padding: 2rem 0; }
@@ -19,11 +19,24 @@
         footer { background: #333; color: #fff; text-align: center; padding: 1rem 0; margin-top: 2rem; }
         .tab { margin-left: 20px; }
         .env-file { background: #f8f8f8; border-left: 4px solid #007bff; padding: 1rem; margin: 1rem 0; }
+        .language-switcher { position: absolute; top: 1rem; right: 1rem; }
+        .language-switcher a { 
+            background: #007bff; 
+            color: white; 
+            padding: 5px 10px; 
+            text-decoration: none; 
+            border-radius: 3px; 
+            font-size: 0.9rem;
+        }
+        .language-switcher a:hover { background: #0056b3; }
     </style>
 </head>
 <body>
     <header>
         <div class="container">
+            <div class="language-switcher">
+                <a href="/ru/index.html">Русский</a>
+            </div>
             <h1>Monitoring</h1>
             <p>Powerful distributed monitoring system for your infrastructure</p>
         </div>
@@ -194,7 +207,6 @@
         </div>
     </section>
 
-
     <section id="quick-start" style="background: #f9f9f9;">
         <div class="container">
             <h2 style="text-align: center;">Quick Start</h2>
@@ -239,7 +251,6 @@
             <h2 style="text-align: center;">Documentation</h2>
             <p style="text-align: center;">Complete guide for installation, configuration and usage of all project features.</p>
             <p style="text-align: center;">
-                <!-- Link to full documentation (e.g., GitHub Pages or GitBook) -->
                 <a href="https://github.com/AKEB/monitoring/wiki" style="background: #28a745; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Read Documentation</a>
             </p>
         </div>
