--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Monitoring - Distributed Monitoring System</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; color: #333; }
@@ -35,7 +35,7 @@
     <header>
         <div class="container">
             <div class="language-switcher">
-                <a href="/ru/index.html">Русский</a>
+                <a href="ru/index.html">Русский</a>
             </div>
             <h1>Monitoring</h1>
             <p>Powerful distributed monitoring system for your infrastructure</p>
