--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="language-switcher">
                 <a href="ru/index.html">Русский</a>
             </div>
+            <img src="images/icon.png" />
             <h1>Monitoring</h1>
             <p>Powerful distributed monitoring system for your infrastructure</p>
         </div>
