--- a/ru/index.html
+++ b/ru/index.html
@@ -37,6 +37,7 @@
             <div class="language-switcher">
                 <a href="../index.html">English</a>
             </div>
+            <img src="../images/icon.png" />
             <h1>Monitoring</h1>
             <p>Мощная распределенная система мониторинга для вашей инфраструктуры</p>
         </div>
