--- a/ru/index.html
+++ b/ru/index.html
@@ -110,6 +110,7 @@
                     <p><a href="https://hub.docker.com/repository/docker/akeb/monitoring-worker/general" style="color: #000000">Docker Hub</a></p>
                 </div>
             </div>
+            <p style="text-align: center;"><img src="../images/architecture.png" title="architecture" alt="architecture"/></p>
         </div>
     </section>
 
