--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="env-file">
                 <code>
                     # Timezone<br/>
-                    TZ=Europe/Moscow<br/>
+                    TZ=Europe/London<br/>
                     <br/>
                     # MySQL<br/>
                     MYSQL_PASSWORD=YourSecureRootPassword123<br/>
